fix some bug with dark mode

--- a/src/components/CustomNav/CustomNav.scss
+++ b/src/components/CustomNav/CustomNav.scss
@@ -7,6 +7,10 @@
   font-weight: 500;
   display: inline-block;
 
+  svg {
+    color: unset;
+  }
+
   &:hover {
     color: $main-text-color;
   }
